--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "prefer-stable": true,
     "autoload": {
         "files": [ "offbeatwp-cli.php" ],
-        "psr-4": [ "OffbeatCli", "src/" ]
+        "psr-4": [ "OffbeatCli\\", "src/" ]
     },
     "require": {
         "wp-cli/wp-cli": "2.1.0"
