--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,12 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "autoload": {
-        "files": [ "offbeatwp-cli.php" ],
-        "psr-4": { "OffbeatCli\\": "src/" }
+        "files": [ 
+            "offbeatwp-cli.php"
+        ],
+        "psr-4": { 
+            "OffbeatCli\\": "src/" 
+        }
     },
     "require": {
         "wp-cli/wp-cli": "2.1.0"
