--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         }
     },
     "require": {
-        "wp-cli/wp-cli": "~2.1"
+        "wp-cli/wp-cli": "~2.1",
+        "ext-curl": "*",
+        "ext-json": "*"
     }
     ,
     "require-dev": {
